# octopod

./: .env  .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  code.md  scenario.sh
assets/: completion.bash
doc/: building.md  cross-compiling.md  notes.md
migrations/20170705125415_init/: down.sql  up.sql
src/: cli.yml  common.rs  database.rs  init.sql  main.rs  models.rs  podcast.rs  schema.rs
src/sql/: init.sql
