[package]
name = "rusty"
version = "0.1.0"
authors = ["Yann <yann@fery.me>"]

[dependencies]
clap = { version = "2.19", features = ["yaml"]}
rusqlite = "0.11.0"   
url = "1.4.0"
curl = "0.4.6"
rss = "0.5"
hyper = "0.10.10"
hyper-native-tls = "0.2.3"
slog = "2.0.5"
slog-term = "2.0.1"
slog-async = "2.0.1"
pbr = "1.0.0"
