[package]
name = "octopod"
version = "0.1.0"
authors = ["Yann <yann@fery.me>"]

[dependencies]
clap = { version = "2.19", features = ["yaml"]}
url = "1.4.0"
curl = "0.4.7"
rss = "0.6"
hyper = "0.11"
tokio-core = "0.1.8"
futures = "0.1.14"
mime = "0.3.2"
slog = "2.0.5"
slog-term = "2.0.1"
slog-async = "2.0.1"
time = "0.1.37"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "0.14.0", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.14.0", features = ["sqlite"] }
dotenv = "0.9.0"
chrono = { version = "0.4.0",  features = ["serde", "rustc-serialize"] }

[dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest"
rev = "478309e03f9f902d592d9b5ec6cab2a476c6b069"
features = ["unstable"]

# wait for PR inclusion https://github.com/a8m/pb/issues/45
[dependencies.pbr]
git = "https://github.com/yfery/pb"
branch = "FinalRedrawWhenMaxRefreshRateSet"
